# rag-mongodb-openai

./: .gitignore  README.md  pyproject.toml  rag.ipynb  requirement.txt
